--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First Web Page</title>
   <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Journal</title>
 </head>
 <body>
-  <h1>Welcome to My Website</h1>
-  <p>This is my first HTML and CSS project uploaded using GitHub Desktop.</p>
-  <p>So lets start with this.</p>
-  
+  <center>
+    <div id="total">
+  <div id="mainbody">
+    <div id="header">
+    <h1 style="text-align: right;">Victoria's Journal</h1>
+    <p style="text-align: right;">So fresh and so clean</p>
+    </div>
+
+    <div id="friends">
+    <h2>Friends</h2>
+        <ul>
+            <li>390 Buddies</li>
+            <li><a href="#">Big Will</a></li>
+            <li><a href="#">Camille</a></li>
+        </ul>
+ </div>
+       <div id="entry">
+        <h2 style=""> 04/09/08: Spatulas</h2>
+        <p style="color: goldenrod; text-align: left; text-indent: 0%;" >Yesterday, I went to the store and got some much needed spatulas! (What better way to say I love myself than to buy myself a spatula?)  <img src="spatula.jpg" alt="spatula" width="200" height="200" ></p>
+      
+       </div>
+  </div>
+    </div>
+  </center>
+
 </body>
 </html>
